--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
   "homepage": "https://github.com/wisteriaflash/jdcart",
   "devDependencies": {
     "grunt": "^0.4.5",
-    "grunt-browser-sync": "^1.9.1"
+    "grunt-browser-sync": "^1.9.1",
+    "grunt-contrib-watch": "^0.6.1",
+    "grunt-contrib-sass": "^0.8.1",
+    "load-grunt-tasks": "^2.0.0"
   }
 }
