--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "grunt": "^0.4.5",
     "grunt-browser-sync": "^1.9.1",
     "grunt-contrib-watch": "^0.6.1",
-    "grunt-contrib-sass": "^0.8.1",
+    "grunt-sass": "^1.0.0",
     "load-grunt-tasks": "^2.0.0"
   }
 }
